--- a/Cedar App/res/values/strings.xml
+++ b/Cedar App/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="blue_streak">Blue Streak</string>
     <string name="cedar_creek_mine">Cedar Creek Mine Ride</string>
     <string name="calypso">Calypso</string>
+    <string name="cedar_downs">Cedar Racing Derby</string>
+    <string name="corkscrew">Corkscrew</string>
+    <string name="dodgem">Dodgem</string>
 
 </resources>
