--- a/Cedar App/res/values/strings.xml
+++ b/Cedar App/res/values/strings.xml
@@ -34,5 +34,7 @@
     <string name="wind_seeker">WindSeeker</string>
     <string name="witches_wheel">Witches\' Wheel</string>
     <string name="woodstock_express">Woodstock Express</string>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 
 </resources>
