--- a/Cedar App/res/values/strings.xml
+++ b/Cedar App/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
 
     <string name="app_name">Cedar App</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_listof_rides">ListofRides</string>
     <string name="blue_streak">Blue Streak</string>
@@ -34,10 +33,14 @@
     <string name="wind_seeker">WindSeeker</string>
     <string name="witches_wheel">Witches\' Wheel</string>
     <string name="woodstock_express">Woodstock Express</string>
+
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+
     <string name="shoot_the_rapids">Shoot the Rapids</string>
     <string name="snake_river_falls">Snake River Falls</string>
     <string name="thunder_canyon">Thunder Canyon</string>
+    <string name="button_map">View Map</string>
+    <string name="title_activity_display_map">Map</string>
 
 </resources>
